# mcp-bouncer

./: .gitignore  CHANGELOG.md  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  bouncer.py  pyproject.toml
.github/workflows/: ci.yml
hooks/: on_session_start.py
site/: astro.config.mjs
site/src/: site-config.ts
src/mcp_bouncer/: __init__.py  bouncer.py  hook.py
tests/: test_import.py
