[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bouncer"
version = "1.0.1"
description = "Health-check your MCP servers, quarantine broken ones, auto-restore when they recover."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" },
]
keywords = ["mcp", "claude", "claude-code", "health-check", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/mcp-bouncer"
Repository = "https://github.com/mcp-tool-shop-org/mcp-bouncer"
Issues = "https://github.com/mcp-tool-shop-org/mcp-bouncer/issues"

[project.scripts]
mcp-bouncer = "mcp_bouncer.bouncer:cli"
mcp-bouncer-hook = "mcp_bouncer.hook:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
